--- a/style.css
+++ b/style.css
@@ -43,5 +43,20 @@ input{
     outline: none;
     background: transparent;
     padding: 10px;
-  
+}
+button{
+    border: none;
+    outline: none;
+    padding: 16px 50px;
+    background: #ff5945;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 40px
+    
+}
+ul li{
+    list-style: none;
+    font-size: 17px;
+    padding: 12px 8px 12px 50px;
 }
